# spacetraders-api

./: .gitignore  LICENSE  README.md  api.py  gunicorn.py  manage.py  pyproject.toml
galaxy/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
galaxy/management/commands/: delete_failed_jobs.py
galaxy/migrations/: 0001_initial.py  0002_alter_contract_type_alter_markettradegood_activity_and_more.py  0002_ship_behaviour.py  0002_tradegood_inputs_alter_faction_traits_and_more.py  0003_alter_agent_symbol_and_more.py  0003_remove_shipyardtransaction_agent_and_more.py  0004_agent_bearer_token_agent_user.py
galaxy/templates/galaxy/: agent_detail.html  home_page.html  market_detail.html  ship_detail.html  system_detail.html  waypoint_detail.html
galaxy/templatetags/: galaxy_extras.py
spacetraders/: __init__.py  asgi.py  client.py  context_processors.py  settings.py  urls.py  utils.py  wsgi.py
spacetraders/templates/: base.html
spacetraders_api/: __init__.py  client.py  models.py
