[project]
name = "spacetraders-api"
version = "0.1.0"
description = "https://docs.spacetraders.io/quickstart/new-game"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django[argon2]==5.2.3",
  "psycopg[binary,pool]==3.2.9",
  "python-dotenv==1.1.0",
  "dj-database-url==3.0.0",
  "django-extensions==4.1",
  "gunicorn==23.0.0",
  "requests>=2.32.4",
  "ratelimit>=2.2.1",
  "humanize>=4.12.3",
  "django-rq>=3.0.1",
  "django-mathfilters>=1.0.0",
]

[dependency-groups]
dev = ["ipython>=9.3.0", "ipdb>=0.13.13"]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = ["E265", "E501", "E722"]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
